--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,55 @@ body {
 .navbar-dark{
 	background-color: #512DA8;
 }
+.table-striped tbody tr:nth-of-type(odd) {
+  background-color: #f2e6ff;
+}
+.table-dark,
+.table-dark > th,
+.table-dark > td {
+  background-color: #c6c8ca;
+}
+
+.table-dark th,
+.table-dark td,
+.table-dark thead th,
+.table-dark tbody + tbody {
+  border-color: #512DA8;
+}
+.table .thead-dark th {
+  color: #fff;
+  background-color: #9575CD;
+  border-color: #9575CD;
+}
+.not-bg-primary{
+	background-color: #9575CD;
+  }
+.not-bg-light{
+	background-color: #f2e6ff;
+}
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
+.carousel {
+    background:#512DA8;
+}
+
+.carousel-item {
+  height: 300px;
+}
+
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+}
+#carouselButton {
+    right:0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
